--- a/index.html
+++ b/index.html
@@ -88,6 +88,110 @@
                     </div>
                 </div>
             </section>
+            <section class="experience">
+                <div class="container">
+                    <h2 class="title_all">
+                        Designing Better Experience
+                    </h2>
+                    <p class="description_experience description_all">
+                        Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics 
+                    </p>
+                    <div class="wrapper_experience">
+                        <div class="item_experience">
+                            <div class="icon_experience"><img src="img/experience/people.png" alt="people" class="people_more"></div>
+                            <h2 class="subtitle_experience">
+                                972 +
+                            </h2>
+                            <p class="description_experience_text">
+                                Consumer Products 
+                            </p>
+                        </div>
+                        <div class="item_experience">
+                            <div class="icon_experience"><img src="img/experience/line.png" alt="line" class="people_more"></div>
+                            <h2 class="subtitle_experience">
+                                181 +
+                            </h2>
+                            <p class="description_experience_text">
+                                Financial Services 
+                            </p>
+                        </div>
+                        <div class="item_experience">
+                            <div class="icon_experience"><img src="img/experience/reward.png" alt="reward" class="people_more"></div>
+                            <h2 class="subtitle_experience">
+                                98%
+                            </h2>
+                            <p class="description_experience_text">
+                                Environmental   
+                            </p>
+                        </div>
+                        <div class="item_experience">
+                            <div class="icon_experience"><img src="img/experience/suitcase.png" alt="suitcase" class="people_more"></div>
+                            <h2 class="subtitle_experience">
+                                746 +
+                            </h2>
+                            <p class="description_experience_text">
+                                Business & Finance 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="advice">
+                <div class="container">
+                    <h2 class="title_all title_all_advice">
+                        Practice Advice                   
+                    </h2>
+                    <p class="description_all description_all__advice">
+                        Problems trying to resolve the conflict between<br> the two major realms of Classical physics: Newtonian mechanics  
+                    </p>
+                    <div class="wrapper_advice">
+                        <div class="advice_item">
+                            <div class="wrapper_for_text_advice">
+                                <h5 class="subtitle_advice">
+                                    A single source of truth
+                                </h5>
+                                <p class="description_advice">
+                                    Newton thought that light was made up of particles, but then it was discovered
+                                </p>
+                            </div>
+                            <div class="icon_advice"><img src="img/advice/notebook.png" alt="notebook"></div>
+                        </div>
+                        <div class="advice_item">
+                            <div class="wrapper_for_text_advice">
+                                <h5 class="subtitle_advice">
+                                    Fastest way to organize
+                                </h5>
+                                <p class="description_advice">
+                                    “Quantum mechanics” is the description of the behaviour of matter
+                                </p>
+                            </div>
+                            <div class="icon_advice"><img src="img/advice/building.png" alt="building"></div>
+                        </div>
+                        <div class="advice_item">
+                            <div class="wrapper_for_text_advice">
+                                <h5 class="subtitle_advice">
+                                    Fastest way to take action
+                                </h5>
+                                <p class="description_advice">
+                                    They describe a universe consisting of bodies moving
+                                </p>
+                            </div>
+                            <div class="icon_advice"><img src="img/advice/nootebook_2.png" alt="nootebook_2"></div>
+                        </div>
+                        <div class="advice_item">
+                            <div class="wrapper_for_text_advice">
+                                <h5 class="subtitle_advice">
+                                    Work better together
+                                </h5>
+                                <p class="description_advice">
+                                    They finally obtained a consistent description of the behaviour 
+                                </p>
+                            </div>
+                            <div class="icon_advice"><img src="img/advice/office.png" alt="office"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
