--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </section>
             <section class="experience">
                 <div class="container">
-                    <h2 class="title_all">
+                    <h2 class="title__experience title_all">
                         Designing Better Experience
                     </h2>
                     <p class="description_experience description_all">
@@ -192,7 +192,55 @@
                     </div>
                 </div>
             </section>
+            <sectoon class="who_you_are">
+                <div class="container">
+                    <h2 class="title_all title_all_who">
+                        Who We Are                   
+                    </h2>
+                    <p class="description_all description_all__who">
+                        Problems trying to resolve the conflict between the two major realms<br> of Classical physics: Newtonian mechanics   
+                    </p>
+                    <div class="wrapper_video_content">
+                        <div class="video_wrapper">
+                            <video poster="video/media bg-cover.png" controls src="video/022 Modul.mp4" class="video_item"></video>
+                        </div>
+                        <div class="most_text_block">
+                            <h2 class="title_all title_most_text">
+                                Most trusted in our field                   
+                            </h2>
+                            <p class="description_all description_most_text">
+                                Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.   
+                            </p>
+                            <div class="wrapper_text_item">
+                                <div class="icon_who_are"><img src="img/who you are/people.png" alt="people"></div>
+                                <div class="wrapper_subtext_and_title">
+                                    <h5 class="sub_title_who">
+                                        the quick fox jumps over the lazy dog
+                                    </h5>
+                                    <p class="subtext_item">
+                                        Things on a very small scale ...
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="wrapper_text_item">
+                                <div class="icon_who_are"><img src="img/who you are/speedometr.png" alt="speedometr"></div>
+                                <div class="wrapper_subtext_and_title">
+                                    <h5 class="sub_title_who">
+                                        the quick fox jumps over the lazy dog
+                                    </h5>
+                                    <p class="subtext_item">
+                                        Things on a very small scale ...
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </sectoon>
         </main>
+        <footer>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, qui. Facere veritatis quisquam quam fugiat distinctio fugit, praesentium quod. Aliquid harum culpa deleniti. Dicta, facilis! Doloremque fugiat eligendi sapiente esse!
+        </footer>
     </div>
 </body>
 </html>
