--- a/index.html
+++ b/index.html
@@ -235,12 +235,29 @@
                             </div>
                         </div>
                     </div>
+                    <div class="brands_wrapper">
+                        <div class="item_brand">
+                            <img src="img/brands/hooli.png" alt="brand" class="brand">
+                        </div>
+                        <div class="item_brand">
+                            <img src="img/brands/lya.png" alt="brand" class="brand">
+                        </div>
+                        <div class="item_brand">
+                            <img src="img/brands/flower.png" alt="brand" class="brand">
+                        </div>
+                        <div class="item_brand">
+                            <img src="img/brands/stripe.png" alt="brand" class="brand">
+                        </div>
+                        <div class="item_brand">
+                            <img src="img/brands/aws.png" alt="brand" class="brand">
+                        </div>
+                        <div class="item_brand">
+                            <img src="img/brands/telepuzik.png" alt="brand" class="brand">
+                        </div>
+                    </div>
                 </div>
             </sectoon>
         </main>
-        <footer>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, qui. Facere veritatis quisquam quam fugiat distinctio fugit, praesentium quod. Aliquid harum culpa deleniti. Dicta, facilis! Doloremque fugiat eligendi sapiente esse!
-        </footer>
     </div>
 </body>
 </html>
